WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212090
SQLite database fails to close in SQLiteIDBBackingStore::databaseNameFromFile
https://bugs.webkit.org/show_bug.cgi?id=212090
Summary
SQLite database fails to close in SQLiteIDBBackingStore::databaseNameFromFile
Sihui Liu
Reported
2020-05-19 10:24:49 PDT
...
Attachments
Patch
(1.72 KB, patch)
2020-05-19 10:27 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.83 KB, patch)
2020-05-21 10:32 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2020-05-19 10:27:38 PDT
Created
attachment 399747
[details]
Patch
Darin Adler
Comment 2
2020-05-19 17:46:50 PDT
Comment on
attachment 399747
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=399747&action=review
> Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:924 > database.close();
I suggest removing this line of code also.
> Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:-929 > - database.close();
I don’t think you need to do the rest of this change. Just removing this line of code alone should fix the bug, without the restructuring.
Sihui Liu
Comment 3
2020-05-21 10:32:23 PDT
Created
attachment 399965
[details]
Patch for landing
EWS
Comment 4
2020-05-21 11:03:02 PDT
Committed
r262015
: <
https://trac.webkit.org/changeset/262015
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399965
[details]
.
Radar WebKit Bug Importer
Comment 5
2020-05-21 11:04:14 PDT
<
rdar://problem/63501180
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug