SQLite database fails to close in SQLiteIDBBackingStore::databaseNameFromFile https://bugs.webkit.org/show_bug.cgi?id=212090

Reviewed by Darin Adler.

We should finish SQLite statement before closing database.

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::databaseNameFromFile):


Canonical link: https://commits.webkit.org/225084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262015 268f45cc-cd09-0410-ab3c-d52691b4dbfc